--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,12 +1,21 @@
 *, *:before, *:after {
   box-sizing: border-box;
+
+  /* Disable selection of characters in the game board */
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 html {
-  font-size: 16px;
-  line-height: 24px;
-  font-family: 'Tajawal', sans-serif;
-  color: #444;
+  font-size: 16px;  
+  font-family: 'Orbitron', sans-serif;
+  height: 100%;
+  color: #111;
 }
 
 i {
@@ -14,34 +23,241 @@ i {
 }
 
 button {
-  transition: .3s;  
-  cursor: pointer;
+  font: inherit;
+}
+
+button:focus {
+  outline: 0;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  height: 100%;
 }
 
 a {
+  color: inherit;
   text-decoration: none;
-  color: blue;
 }
 
 a:hover {
   text-decoration: underline;
 }
 
-body {
-  margin: 0;
+.modal-hidden {
+  display: none;
 }
 
-.board {
-  border: 1px solid;
+.modal-background {
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 100%;
+
+  overflow: auto;
+  background-color: rgb(0,0,0,.5);
+}
+
+.modal-wrapper {
+  margin: auto;
+  padding: 1rem;
+}
+
+.modal {
+  width: 100%;
+  font-size: 1.1rem;
+  line-height: 2rem;
+  border-radius: 5px;
+  overflow: hidden;  
+  background-color: #fff;
+}
+
+.modal-header, .modal-body, .modal-footer {
+  padding: .5rem 1rem;
+}
+
+.modal-body {
+  margin: 0;
+  list-style: none;
+}
+
+.modal-body li {
+  white-space: nowrap;
+}
+
+.game-mode {
+  padding: 0 .2rem;
+  display: block;
+}
+
+.game-mode:hover {
+  background-color: #000;
+  color: #fff;
+  text-decoration: none;
+}
+
+
+.modal-header {
   text-align: center;
 }
 
-.cell {
-  padding: 2rem;
-  font-size: 3rem;
+.modal h3 {
+  margin: 0;
+}
+
+.modal-footer {
+  display: flex;
+  font-weight: bold;
+}
+
+.modal-footer button {
+  width: 50%;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.modal-footer button:hover {
+  background-color: black;
+  color: white;
+}
+
+.container {
+  width: 100%;
+  max-width: 1310px;
+  margin: auto;
+  overflow: hidden;
+}
+
+.header, .main {
+	width: 100%;
+}
+
+.logo {
+  text-align: center;
+}
+
+.match-info {
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+  width: 320px;
+  margin: auto;
+  padding: .2rem 0;
+}
+
+.player-info {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.p1-info {
+  align-items: center;
+}
+
+.p2-info {
+  align-items: center;
+}
+
+.player-name {
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: bold;
+  border: 0;
+  background-color: #fff;
+}
+
+.marker {
+  padding: 0 .4rem;
+}
+
+.score {
+  font-size: 2rem;
+  line-height: 2rem;
+  font-weight: bold;
 }
 
 
-.highlight {
-  background-color: blue;
+.board {
+  border: 8px solid #000;
+  border-collapse: collapse;
+  color: #000;
+  margin: auto;
+  width: 320px;
+  height: 320px;
+}
+
+.board tr {
+  height: 30%;
+}
+
+.board td {
+  width: 30%;  
+  padding: 0;
+  border: 8px solid #000;
+  overflow: hidden;
+}
+
+.cell {
+  font-size: 2.5rem;
+  padding: 0;
+  width: 100% !important;
+  height: 100% !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: .5s;
+
+  text-shadow: 2px 2px 5px #777
+}
+
+.cell:hover {
+  font-size: 3rem;
+  background-color: #ddd;
+}
+
+.cell:active {
+  font-size: 4rem;
+}
+
+.highlight {  
+  font-size: 3rem !important;
+  color: #fff;
+  background-color: #000;
+  animation: pulse 1s ease 2;
+}
+
+.status {
+  text-align: center;
+  padding: .2rem 0;
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+}
+
+@keyframes pulse {
+  50% {
+    font-size: 4rem;
+  }
+  100% {
+    font-size: 3rem;
+  }
+}
+
+@media (min-width: 500px) {
+  html {
+    font-size: 24px;
+  }
+
+  .board {
+    height: 480px;
+    width: 480px;
+  }
+
+  .match-info {
+    width: 480px;
+  }
 }
