--- a/assets/styles.css
+++ b/assets/styles.css
@@ -45,8 +45,8 @@ a:hover {
   text-decoration: underline;
 }
 
-.modal-hidden {
-  display: none;
+.hidden {
+  display: none !important;
 }
 
 .modal-background {
@@ -89,6 +89,11 @@ a:hover {
 .game-mode {
   padding: 0 .2rem;
   display: block;
+}
+
+.selected {  
+    background-color: #000;
+    color: #fff;
 }
 
 .game-mode:hover {
@@ -168,6 +173,11 @@ a:hover {
   font-weight: bold;
   border: 0;
   background-color: #fff;
+  cursor: pointer;
+}
+
+#p1-name, #p2-name {
+  pointer-events: none;
 }
 
 .marker {
@@ -210,7 +220,7 @@ a:hover {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  transition: .5s;
+  transition: .3s;
 
   text-shadow: 2px 2px 5px #777
 }
@@ -228,7 +238,7 @@ a:hover {
   font-size: 3rem !important;
   color: #fff;
   background-color: #000;
-  animation: pulse 1s ease 2;
+  animation: pulse .5s ease 2;
 }
 
 .status {
