--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,7 +15,8 @@ html {
   font-size: 16px;  
   font-family: 'Orbitron', sans-serif;
   height: 100%;
-  color: #111;
+  background-color: #000;
+  color: #fff;
 }
 
 i {
@@ -34,6 +35,7 @@ body {
   margin: 0;
   display: flex;
   height: 100%;
+  margin: auto;
 }
 
 a {
@@ -69,8 +71,9 @@ a:hover {
   font-size: 1.1rem;
   line-height: 2rem;
   border-radius: 5px;
+  border: 2px solid #fff;
   overflow: hidden;  
-  background-color: #fff;
+  background-color: #000;
 }
 
 .modal-header, .modal-body, .modal-footer {
@@ -92,13 +95,13 @@ a:hover {
 }
 
 .selected {  
-    background-color: #000;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
 }
 
 .game-mode:hover {
-  background-color: #000;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   text-decoration: none;
 }
 
@@ -119,18 +122,18 @@ a:hover {
 .modal-footer button {
   width: 50%;
   border: 0;
+  color: #fff;
   background-color: transparent;
   cursor: pointer;
 }
 
 .modal-footer button:hover {
-  background-color: black;
-  color: white;
+  background-color: #fff;
+  color: #000;
 }
 
 .container {
   width: 100%;
-  max-width: 1310px;
   margin: auto;
   overflow: hidden;
 }
@@ -139,8 +142,10 @@ a:hover {
 	width: 100%;
 }
 
-.logo {
-  text-align: center;
+.github {
+  text-align: right;
+  width: 320px;  
+  margin: auto;
 }
 
 .match-info {
@@ -172,7 +177,7 @@ a:hover {
   font-size: 1rem;
   font-weight: bold;
   border: 0;
-  background-color: #fff;
+  background-color: #000;
   cursor: pointer;
 }
 
@@ -192,9 +197,9 @@ a:hover {
 
 
 .board {
-  border: 8px solid #000;
+  border: 8px solid #fff;
   border-collapse: collapse;
-  color: #000;
+  color: #fff;
   margin: auto;
   width: 320px;
   height: 320px;
@@ -207,7 +212,7 @@ a:hover {
 .board td {
   width: 30%;  
   padding: 0;
-  border: 8px solid #000;
+  border: 8px solid #fff;
   overflow: hidden;
 }
 
@@ -236,8 +241,8 @@ a:hover {
 
 .highlight {  
   font-size: 3rem !important;
-  color: #fff;
-  background-color: #000;
+  color: #000;
+  background-color: #fff;
   animation: pulse .5s ease 2;
 }
 
@@ -267,7 +272,7 @@ a:hover {
     width: 480px;
   }
 
-  .match-info {
+  .match-info, .github {
     width: 480px;
   }
 }
@@ -282,7 +287,7 @@ a:hover {
     width: 580px;
   }
 
-  .match-info {
+  .match-info, .github {
     width: 580px;
   }
 }
